--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-gems:
-  - jekyll-sitemap
-
-theme: jekyll-theme-slate
-google_analytics: UA-187509932-2
+remote_theme: pages-themes/slate@v0.2.0
+url: "https://s4na.github.io/" 
+plugins:
+- jekyll-remote-theme
+- jekyll-sitemap
